# spypixel

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
scripts/: generate-ssl.sh  init-letsencrypt.sh
spypixel/: app.py  models.py  utils.py
